--- a/_sass/minimal-mistakes/skins/_dark.scss
+++ b/_sass/minimal-mistakes/skins/_dark.scss
@@ -3,11 +3,11 @@
    ========================================================================== */
 
 /* Colors */
-$background-color: #002C2F !default;
+$background-color: #262525 !default;
 $text-color: #eaeaea !default;
-$primary-color: #1E646E !default;
+$primary-color: #2F2E2E !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
-$code-background-color: mix(#000, $background-color, 15%) !default;
+$code-background-color: mix(#eaeaea, $background-color, 30%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
 $form-background-color: mix(#000, $background-color, 15%) !default;
 $footer-background-color: mix(#000, $background-color, 30%) !default;
