--- a/_sass/minimal-mistakes/skins/_dark.scss
+++ b/_sass/minimal-mistakes/skins/_dark.scss
@@ -5,7 +5,7 @@
 /* Colors */
 $background-color: #262525 !default;
 $text-color: #eaeaea !default;
-$primary-color: #2F2E2E !default;
+$primary-color: #545454 !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
 $code-background-color: mix(#eaeaea, $background-color, 30%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
