--- a/_sass/minimal-mistakes/_buttons.scss
+++ b/_sass/minimal-mistakes/_buttons.scss
@@ -28,6 +28,11 @@
     margin-left: -0.5em; /* override for hidden text*/
   }
 
+  .center-button {
+    display: block;
+    margin: auto;
+  }
+
   /* button colors */
   $buttoncolors:
   (primary, $primary-color),
