--- a/_sass/minimal-mistakes/_search.scss
+++ b/_sass/minimal-mistakes/_search.scss
@@ -95,11 +95,11 @@
     margin-bottom: 2em;
 
     @include breakpoint($large) {
-      width: 75%;
+      width: 50%; // 화면이 $large 이상이면 2개의 요소가 한 줄에 표시
     }
 
     @include breakpoint($x-large) {
-      width: 50%;
+      width: 33.33%; // 화면이 $x-large 이상이면 3개의 요소가 한 줄에 표시
     }
   }
 
@@ -109,6 +109,10 @@
 
   .archive__item-excerpt {
     margin-bottom: 0;
+  }
+
+  .archive__item-teaser {
+    display: none;
   }
 }
 
